--- a/search/server/package.json
+++ b/search/server/package.json
@@ -10,6 +10,7 @@
     "passport"          : "*",
     "passport-google"   : "*",
     "passport-facebook" : "*",
-    "passport-twitter"  : "*"
+    "passport-twitter"  : "*",
+    "MD5"               : "*"
   }
 }
