--- a/search/bower.json
+++ b/search/bower.json
@@ -18,6 +18,7 @@
     "bootstrap": "~3.2.0",
     "font-awesome": "~4.2.0",
     "handlebars": "~2.0.0",
-    "animate-css": "~3.2.0"
+    "animate-css": "~3.2.0",
+    "polymer": "Polymer/polymer#~0.4.2"
   }
 }
