--- a/search/bower.json
+++ b/search/bower.json
@@ -19,6 +19,8 @@
     "font-awesome": "~4.2.0",
     "handlebars": "~2.0.0",
     "animate-css": "~3.2.0",
-    "polymer": "Polymer/polymer#~0.4.2"
+    "polymer": "Polymer/polymer#~0.4.2",
+    "core-elements": "Polymer/core-elements#~0.4.2",
+    "paper-elements": "Polymer/paper-elements#~0.4.2"
   }
 }
