--- a/search/bower.json
+++ b/search/bower.json
@@ -21,6 +21,7 @@
     "animate-css": "~3.2.0",
     "polymer": "Polymer/polymer#~0.4.2",
     "core-elements": "Polymer/core-elements#~0.4.2",
-    "paper-elements": "Polymer/paper-elements#~0.4.2"
+    "paper-elements": "Polymer/paper-elements#~0.4.2",
+    "js-md5": "~1.1.0"
   }
 }
