--- a/search/bower.json
+++ b/search/bower.json
@@ -22,6 +22,8 @@
     "polymer": "Polymer/polymer#~0.4.2",
     "core-elements": "Polymer/core-elements#~0.4.2",
     "paper-elements": "Polymer/paper-elements#~0.4.2",
-    "js-md5": "~1.1.0"
+    "js-md5": "~1.1.0",
+    "md5": "~0.2.2",
+    "deep-equal": "~0.0.0"
   }
 }
