--- a/search/bower.json
+++ b/search/bower.json
@@ -15,13 +15,12 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "~3.2.0",
-    "font-awesome": "~4.2.0",
+    "bootswatch-dist": "paper",
     "handlebars": "~2.0.0",
-    "animate-css": "~3.2.0",
-    "polymer": "Polymer/polymer#~0.4.2",
-    "core-elements": "Polymer/core-elements#~0.4.2",
-    "paper-elements": "Polymer/paper-elements#~0.4.2",
+    "polymer": "Polymer/polymer#^0.8.0-rc.7",
+    "animate-css": "~3.2.6",
+    "font-awesome": "~4.3.0",
+    "leaflet": "~0.7.3",
     "js-md5": "~1.1.0",
     "md5": "~0.2.2",
     "deep-equal": "~0.0.0"
