--- a/search/package.json
+++ b/search/package.json
@@ -27,7 +27,8 @@
     "grunt-contrib-compass": "^0.9.1",
     "grunt-contrib-imagemin": "^0.8.0",
     "grunt-contrib-cssmin": "^0.10.0",
-    "grunt-svgmin": "^0.4.0"
+    "grunt-svgmin": "^0.4.0",
+    "MongoQueryEngine": "git://github.com/CSTARS/MongoQueryEngine.git#v2"
   },
   "devDependencies": {
     "grunt-filerev": "^0.2.1"
