adding location to result page

--- a/search/package.json
+++ b/search/package.json
@@ -28,7 +28,8 @@
     "grunt-contrib-imagemin": "^0.8.0",
     "grunt-contrib-cssmin": "^0.10.0",
     "grunt-svgmin": "^0.4.0",
-    "MongoQueryEngine": "git://github.com/CSTARS/MongoQueryEngine.git"
+    "MongoQueryEngine": "git://github.com/CSTARS/MongoQueryEngine.git",
+    "leaflet": "^0.7.3"
   },
   "devDependencies": {
     "grunt-filerev": "^0.2.1"
