ui updates, not showing already applied filters

--- a/search/bower.json
+++ b/search/bower.json
@@ -24,6 +24,7 @@
     "js-md5": "~1.1.0",
     "md5": "~0.2.2",
     "deep-equal": "~0.0.0",
-    "bower-bootstrap-slider": "~1.0.0"
+    "bower-bootstrap-slider": "~1.0.0",
+    "textillate": "~0.4.0"
   }
 }
