bug fix attempt

--- a/search/package.json
+++ b/search/package.json
@@ -9,6 +9,11 @@
     "MD5": "*",
     "async": "~0.9.0",
     "request": "~2.40.0",
+    "MongoQueryEngine": "git://github.com/CSTARS/MongoQueryEngine.git",
+    "leaflet": "^0.7.3"
+  },
+  "devDependencies": {
+    "grunt-filerev": "^0.2.1",
     "grunt": "^0.4.5",
     "grunt-vulcanize": "^0.4.1",
     "grunt-manifest": "^0.4.0",
@@ -27,11 +32,6 @@
     "grunt-contrib-compass": "^0.9.1",
     "grunt-contrib-imagemin": "^0.8.0",
     "grunt-contrib-cssmin": "^0.10.0",
-    "grunt-svgmin": "^0.4.0",
-    "MongoQueryEngine": "git://github.com/CSTARS/MongoQueryEngine.git",
-    "leaflet": "^0.7.3"
-  },
-  "devDependencies": {
-    "grunt-filerev": "^0.2.1"
+    "grunt-svgmin": "^0.4.0"
   }
 }
