--- a/search/package.json
+++ b/search/package.json
@@ -10,7 +10,8 @@
     "async": "~0.9.0",
     "request": "~2.40.0",
     "MongoQueryEngine": "git://github.com/CSTARS/MongoQueryEngine.git",
-    "leaflet": "^0.7.3"
+    "leaflet": "^0.7.3",
+    "csv-stringify": "0.0.6"
   },
   "devDependencies": {
     "grunt-filerev": "^0.2.1",
