--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
     "md5": "*",
     "bower-bootstrap-slider": "*",
     "textillate": "*",
-    "paper-tabs": "PolymerElements/paper-tabs#~1.0.1"
+    "paper-tabs": "PolymerElements/paper-tabs#~1.0.1",
+    "jquery-jsonview": "~1.2.2"
   }
 }
