--- a/config/config.json
+++ b/config/config.json
@@ -17,9 +17,10 @@
     },
 
     "mqe" : {
+      "node" : "node",
       "db" : {
         "url_old"         : "mongodb://localhost:27017/esis",
-        "url"             : "mongodb://10.0.1.19:27017/esis",
+        "url"             : "mongodb://192.168.2.138:27017/esis",
 
         "mainCollection"  : "search",
         "spectraCollection" : "spectra",
