changing default dir, adding build

--- a/config/config.json
+++ b/config/config.json
@@ -5,7 +5,7 @@
     "middleware": {
         "static": {
             "module": {
-                "arguments": [ "path:./public" ]
+                "arguments": [ "path:./dist" ]
             }
         },
 
