--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "test": "grunt test",
     "build": "grunt build",
+    "dev" : "node server.js --dev",
     "all": "npm run build && npm run test"
   },
   "dependencies": {
