updates for new backend

--- a/config/config.json
+++ b/config/config.json
@@ -19,8 +19,8 @@
     "mqe" : {
       "node" : "node",
       "db" : {
-        "url_old"         : "mongodb://localhost:27017/esis",
-        "url"             : "mongodb://192.168.43.187:27017/esis",
+        "url_old"         : "mongodb://localhost:27017/ecosis",
+        "url"             : "mongodb://192.168.2.138:27017/ecosis",
 
         "mainCollection"  : "search",
         "spectraCollection" : "spectra",
