update for text filter

--- a/config/config.json
+++ b/config/config.json
@@ -31,11 +31,12 @@
 
         "geoFilter" : ["ecosis.geojson"],
 
-        "indexedFilters" : ["Theme", "Measurement Scale", "ecosis.organization"],
+        "indexedFilters" : ["Theme", "ecosis.organization"],
 
         "sortBy"            : "ecosis.package_title",
 
-        "textIndexes"       : ["ecosis.package_title","Keywords", "Theme", "Target Type", "Latin Genus", "Latin Species", "Common Name"],
+        "textIndexes"       : ["ecosis.package_title","ecosis.organization","ecosis.description",
+                              "Keywords", "Theme", "Target Type", "Latin Genus", "Latin Species", "Common Name"],
 
         "searchWhitelist" : ["_id", "ecosis.package_title", "ecosis.package_name", "ecosis.spectra_count", "ecosis.organization",
                             "Keywords", "Theme", "Target Type", "ecosis.description", "Common Name"]
