--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "all": "npm run build && npm run test"
   },
   "dependencies": {
+    "async": "^1.5.2",
     "construx": "^1.0.0",
     "construx-copier": "^1.0.0",
     "csv-stringify": "0.0.8",
