--- a/config/config.json
+++ b/config/config.json
@@ -20,7 +20,8 @@
       "node" : "node",
       "db" : {
         "url_old"         : "mongodb://localhost:27017/ecosis",
-        "url"             : "mongodb://192.168.2.138:27017/ecosis",
+        "database"        : "ecosis-dev",
+        "url"             : "mongodb://192.168.2.138:27017",
 
         "mainCollection"  : "search",
         "spectraCollection" : "spectra",
