--- a/config/config.json
+++ b/config/config.json
@@ -21,7 +21,7 @@
       "db" : {
         "url_old"         : "mongodb://localhost:27017/ecosis",
         "database"        : "ecosis-dev",
-        "url"             : "mongodb://192.168.2.138:27017",
+        "url"             : "mongodb://192.168.2.138:27017/ecosis",
 
         "mainCollection"  : "search",
         "spectraCollection" : "spectra",
