--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "grunt test",
     "build": "grunt build",
     "dev": "node server.js --dev",
-    "docker": "node server.js --docker",
+    "docker": "node server.js --docker --mqe-local=mqe-local.json",
     "all": "npm run build && npm run test"
   },
   "dependencies": {
