--- a/package.json
+++ b/package.json
@@ -12,24 +12,12 @@
     "all": "npm run build && npm run test"
   },
   "dependencies": {
-    "async": "^1.5.2",
-    "construx": "^1.0.0",
-    "construx-copier": "^1.0.0",
-    "csv-stringify": "0.0.8",
-    "express": "^4.12.2",
-    "kraken-js": "^1.0.6",
-    "mongo-query-engine": "^1.0.13",
-    "superagent": "^1.7.2"
-  },
-  "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-browserify": "^3.8.0",
-    "grunt-config-dir": "^0.3.2",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-copy-to": "0.0.10",
-    "grunt-mocha-cli": "^1.14.0",
-    "grunt-vulcanize": "^1.0.0",
-    "mocha": "^1.18.0",
-    "supertest": "^0.9.0"
+    "@ucd-lib/spa-router-middleware": "^0.1.0",
+    "body-parser": "^1.19.0",
+    "bunyan": "^1.8.12",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.4",
+    "csv-stringify": "^5.3.0",
+    "express": "^4.17.1"
   }
 }
