--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
     "csv-stringify": "^5.3.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongodb": "^3.2.7"
   }
 }
