--- a/client/public/package.json
+++ b/client/public/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "@ucd-lib/cork-app-load": "^0.1.3",
+    "@ucd-lib/cork-app-utils": "^4.2.3",
     "lit-element": "^2.1.0"
   }
 }
