starting home page port

--- a/client/public/package.json
+++ b/client/public/package.json
@@ -9,6 +9,9 @@
   "author": "jrmerz@gmail.com",
   "license": "MIT",
   "dependencies": {
+    "@polymer/iron-image": "^3.0.2",
+    "@polymer/iron-pages": "^3.0.1",
+    "@polymer/polymer": "^3.2.0",
     "@ucd-lib/cork-app-load": "^0.1.3",
     "@ucd-lib/cork-app-utils": "^4.2.3",
     "lit-element": "^2.1.0"
