--- a/client/public/package.json
+++ b/client/public/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@polymer/iron-image": "^3.0.2",
     "@polymer/iron-pages": "^3.0.1",
+    "@polymer/paper-button": "^3.0.1",
     "@polymer/polymer": "^3.2.0",
     "@ucd-lib/cork-app-load": "^0.1.3",
     "@ucd-lib/cork-app-utils": "^4.2.3",
