--- a/client/public/package.json
+++ b/client/public/package.json
@@ -16,6 +16,7 @@
     "@polymer/paper-icon-button": "^3.0.2",
     "@polymer/polymer": "^3.2.0",
     "@ucd-lib/cork-app-load": "^0.1.3",
+    "@ucd-lib/cork-app-state": "^1.0.0",
     "@ucd-lib/cork-app-utils": "^4.2.3",
     "lit-element": "^2.1.0"
   }
