--- a/client/public/package.json
+++ b/client/public/package.json
@@ -18,6 +18,7 @@
     "@ucd-lib/cork-app-load": "^0.1.3",
     "@ucd-lib/cork-app-state": "^1.0.0",
     "@ucd-lib/cork-app-utils": "^4.2.3",
+    "clone": "^2.1.2",
     "lit-element": "^2.1.0"
   }
 }
