--- a/client/public/package.json
+++ b/client/public/package.json
@@ -19,6 +19,7 @@
     "@ucd-lib/cork-app-state": "^1.0.0",
     "@ucd-lib/cork-app-utils": "^4.3.2",
     "clone": "^2.1.2",
+    "leaflet": "^1.5.1",
     "lit-element": "^2.2.0"
   }
 }
