--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "cookie-parser": "^1.4.4",
     "csv-stringify": "^5.3.0",
     "express": "^4.17.1",
-    "mongodb": "^3.2.7"
+    "mongodb": "^3.2.7",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "@ucd-lib/cork-app-build": "^0.1.5",
