--- a/client/public/package.json
+++ b/client/public/package.json
@@ -14,6 +14,7 @@
     "@polymer/iron-pages": "^3.0.1",
     "@polymer/paper-button": "^3.0.1",
     "@polymer/paper-icon-button": "^3.0.2",
+    "@polymer/paper-slider": "^3.0.1",
     "@polymer/polymer": "^3.2.0",
     "@ucd-lib/cork-app-load": "^0.1.3",
     "@ucd-lib/cork-app-state": "^1.0.0",
