--- a/client/public/package.json
+++ b/client/public/package.json
@@ -14,13 +14,14 @@
     "@polymer/iron-pages": "^3.0.1",
     "@polymer/paper-button": "^3.0.1",
     "@polymer/paper-icon-button": "^3.0.2",
+    "@polymer/paper-progress": "^3.0.1",
     "@polymer/paper-slider": "^3.0.1",
     "@polymer/polymer": "^3.2.0",
     "@ucd-lib/cork-app-load": "^0.1.3",
     "@ucd-lib/cork-app-state": "^1.0.0",
     "@ucd-lib/cork-app-utils": "^4.3.2",
     "clone": "^2.1.2",
-    "ecosis-client-commons": "0.0.1",
+    "ecosis-client-commons": "0.0.2",
     "leaflet": "^1.5.1",
     "lit-element": "^2.2.0"
   }
